--- a/static/CSS/styles.css
+++ b/static/CSS/styles.css
@@ -27,3 +27,10 @@ a {
 button:hover {
   cursor: pointer;
 }
+
+.back_arrow {
+  cursor: pointer;
+  position: relative;
+  left: 1rem;
+  font-size: 1.5rem;
+}
