--- a/static/CSS/contact.css
+++ b/static/CSS/contact.css
@@ -1,1 +1,114 @@
+.first_half {
+  background: #f0f7fd;
+  height: 50svh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
+.header {
+  padding-top: 2rem;
+  display: flex;
+  align-self: normal;
+}
+
+.header h1 {
+  position: relative;
+  left: 41rem;
+}
+
+.first_half .columns {
+  display: flex;
+  width: 90%;
+  padding: 2rem;
+  justify-content: space-between;
+}
+
+.map {
+  width: 40%;
+}
+
+.map iframe {
+  border-radius: 0.7rem;
+  width: 100%;
+  height: 13rem;
+}
+
+.contact_details {
+  width: 20%;
+}
+
+.contact_details h2 {
+  margin-bottom: 1rem;
+}
+
+.contact_details hr {
+  margin: 1rem 0;
+  border: 1px solid #e3eaf0;
+}
+.contact_details p {
+  font-weight: 600;
+  color: var(--font-color-grey);
+  margin-bottom: 1rem;
+}
+
+.contact_details span {
+  color: var(--bg-color2);
+}
+
+.second_half {
+  height: 50svh;
+  display: flex;
+  justify-content: space-between;
+  padding: 4rem;
+}
+
+.second_half .Logo {
+  display: flex;
+}
+
+.second_half .Logo .Top {
+  font-size: 1.5rem;
+}
+
+.second_half .Logo .Bottom {
+  position: relative;
+  bottom: 0.5rem;
+  left: 0.7rem;
+  font-size: 1.5rem;
+}
+
+.second_half .Logo h1 {
+  margin-left: 0.7rem;
+  font-size: 1.5rem;
+}
+
+.second_half .language select {
+  background-color: var(--bg-color2);
+  color: white;
+  border: none;
+  border-radius: 0.5rem;
+  padding: 0.5rem;
+  margin-bottom: 1rem;
+}
+
+.square {
+  display: block;
+  background: var(--bg-color2);
+  position: fixed;
+  height: 20rem;
+  width: 10rem;
+  rotate: 50deg;
+  left: 90rem;
+  bottom: -7.5rem;
+}
+
+.line {
+  display: block;
+  background: var(--bg-color2);
+  position: fixed;
+  height: 1rem;
+  width: 100vw;
+  left: 0;
+  bottom: 0;
+}
