--- a/static/CSS/how_it_works.css
+++ b/static/CSS/how_it_works.css
@@ -1,112 +1,107 @@
 body {
-	height: 100svh;
-	overflow: hidden;
-}
-
-.back_arrow {
-	color: white;
+  height: 100svh;
+  overflow: hidden;
 }
 
 main {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	height: 100svh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100svh;
 }
 
 .image_background {
-	position: absolute;
-	z-index: -1;
+  position: absolute;
+  z-index: -1;
 }
 
 .image_background::after {
-	content: "";
-	position: absolute;
-	/* Position it absolutely within the container */
-	top: 0;
-	right: 0;
-	bottom: 0;
-	left: 0;
-	background-image: linear-gradient(15deg, rgba(22, 88, 123, 0.8), rgba(128, 205, 197, 0.8));
+  content: "";
+  position: absolute;
+  /* Position it absolutely within the container */
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-image: linear-gradient(
+    15deg,
+    rgba(22, 88, 123, 0.8),
+    rgba(128, 205, 197, 0.8)
+  );
 }
 
 .top_bar {
-	margin-top: 2rem;
-	width: 100%;
-	display: flex;
-	align-items: center;
-	margin-bottom: 2rem;
-	position: relative;
+  margin-top: 2rem;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 2rem;
+  position: relative;
 }
-
-.top_bar h1 {
-	position: absolute;
-	left: 40%;
-}
-
 
 h1,
 h3,
 p {
-	color: white;
+  color: white;
 }
 
 .content {
-	display: flex;
-	margin-top: 2rem;
-	width: 60%;
+  display: flex;
+  margin-top: 2rem;
+  width: 60%;
 }
 
 .first_half {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	width: 20%;
-	height: 75%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 20%;
+  height: 75%;
 }
 
 .icon_container {
-	color: white;
-	background: var(--bg-color2);
-	border-radius: 100%;
-	padding: 1.5rem 0.5rem;
+  color: white;
+  background: var(--bg-color2);
+  border-radius: 100%;
+  padding: 1.5rem 0.5rem;
 }
 
 .icon {
-	border: solid 3px white;
-	border-radius: 3rem;
-	padding: 1rem;
+  border: solid 3px white;
+  border-radius: 3rem;
+  padding: 1rem;
 }
 
 .bar {
-	background: var(--bg-color2);
-	width: 4%;
-	height: 100%;
+  background: var(--bg-color2);
+  width: 4%;
+  height: 100%;
 }
 
 .second_half {
-	width: 70%;
+  width: 70%;
 }
 
 .paragraph h3 {
-	margin-bottom: 1rem;
+  margin-bottom: 1rem;
 }
 
 .paragraph p {
-	margin-bottom: 4rem;
+  margin-bottom: 4rem;
 }
 
 .learn_more {
-	display: flex;
-	width: 20%;
-	align-items: center;
-	justify-content: space-between
+  display: flex;
+  width: 20%;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .learn_more button {
-	background: transparent;
-	border: solid 1px var(--bg-color2);
-	border-radius: 10rem;
-	color: var(--bg-color2);
-	padding: 0.6rem;
+  background: transparent;
+  border: solid 1px var(--bg-color2);
+  border-radius: 10rem;
+  color: var(--bg-color2);
+  padding: 0.6rem;
 }
